02-Orquestacion/02-distributed/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-todo-app
  labels:
    name: ingress-todo-app
spec:
  rules:
  - host: 127-0-0-1.nip.io
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: todo-front-svc
            port:
              number: 80
      - pathType: Prefix
        path: "/api"
        backend:
          service:
            name: todo-api-svc
            port: 
              number: 3000
